Correct section-subtitle z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
